--- a/tipodocumento/src/main/resources/application.properties
+++ b/tipodocumento/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name = microservicio-tipodocumento
 server.port = ${PORT:0}
 
-#» Conexión al config-server
+#» Conexión a config-server
 spring.cloud.config.uri = http://localhost:8888
 
 #Registrar en eureka-server
