--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -43,3 +43,7 @@ zuul.routes.etapa.path = /api/microservicio-etapa/**
 #-> microservicio-usuario
 zuul.routes.usuario.service-id = microservicio-usuario
 zuul.routes.usuario.path = /api/microservicio-usuario/**
+
+#-> microservicio-interpol
+zuul.routes.interpol.service-id = microservicio-interpol
+zuul.routes.interpol.path = /api/microservicio-interpol/**
