--- a/interpol/src/main/resources/application.properties
+++ b/interpol/src/main/resources/application.properties
@@ -2,8 +2,32 @@ spring.application.name = microservicio-interpol
 server.port = ${PORT:0}
 
 #» Conexión al config-server
-spring.cloud.config.uri = http://localhost:8888
+# spring.cloud.config.uri = http://localhost:8888
 
 #» Registrar microservicio en eureka-server...
 eureka.instance.instance-id = ${spring.application.name}
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
+
+#» SQL-SERVER
+#spring.datasource.url = jdbc:sqlserver://localhost:2064;databaseName=BDSidtefim
+#spring.datasource.driver-class-name = com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+#» MYSQL
+spring.datasource.url = jdbc:mysql://localhost:3306/BDSidtefim?serverTimezone=America/Lima
+spring.datasource.username = rguevarav
+spring.datasource.password = 123
+
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
+
+# Configurar Hibernate
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.generate-ddl = false
+logging.level.org.hibernate.SQL = debug
+
+# Indica si debe mostrar el log de las consultas sql ejecutadas
+spring.jpa.show-sql: false
+
+# Config multi-part
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
