--- a/config/src/main/resources/application.properties
+++ b/config/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name = config-server
 server.port = 8888
 
-spring.cloud.config.server.git.uri = file:///F:/SIDTEFIM/config-repository
+spring.cloud.config.server.git.uri = file:///F:/sidtefim/config-server
