--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name = microservicio-gateway
-server.port = 8060
+server.port = 6090
 
-#» Registrar en eureka-server
+#» To register instance into eureka-server
 eureka.instance.instance-id = ${spring.application.name}
-eureka.client.service-url.defaultZone = http://localhost:8761/eureka
+eureka.client.service-url.defaultZone: http://localhost:8761/eureka
 
 #» Rutas dinámicas, para microservicios...
 #------------------------------------------------------------------------------
@@ -11,10 +11,6 @@ eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 #-> microservicio-test
 zuul.routes.test.service-id = microservicio-test
 zuul.routes.test.path = /api/microservicio-test/**
-
-#-> microservicio-procnacionalizacion
-zuul.routes.procnacionalizacion.service-id = microservicio-procnacionalizacion
-zuul.routes.procnacionalizacion.path = /api/microservicio-procnacionalizacion/**
 
 #-> microservicio-usrprocedimiento
 zuul.routes.usrprocedimiento.service-id = microservicio-usrprocedimiento
@@ -24,21 +20,9 @@ zuul.routes.usrprocedimiento.path = /api/microservicio-usrprocedimiento/**
 zuul.routes.tipodocumento.service-id = microservicio-tipodocumento
 zuul.routes.tipodocumento.path = /api/microservicio-tipodocumento/**
 
-#-> microservicio-pais
-zuul.routes.pais.service-id = microservicio-pais
-zuul.routes.pais.path = /api/microservicio-pais/**
-
-#-> microservicio-tiposolicitud
-zuul.routes.tiposolicitud.service-id = microservicio-tiposolicitud
-zuul.routes.tiposolicitud.path = /api/microservicio-tiposolicitud/**
-
 #-> microservicio-tipotramite
 zuul.routes.tipotramite.service-id = microservicio-tipotramite
 zuul.routes.tipotramite.path = /api/microservicio-tipotramite/**
-
-#-> microservicio-etapa
-zuul.routes.etapa.service-id = microservicio-etapa
-zuul.routes.etapa.path = /api/microservicio-etapa/**
 
 #-> microservicio-usuario
 zuul.routes.usuario.service-id = microservicio-usuario
@@ -47,3 +31,15 @@ zuul.routes.usuario.path = /api/microservicio-usuario/**
 #-> microservicio-interpol
 zuul.routes.interpol.service-id = microservicio-interpol
 zuul.routes.interpol.path = /api/microservicio-interpol/**
+
+#-> microservicio-pais
+zuul.routes.pais.service-id = microservicio-pais
+zuul.routes.pais.path = /api/microservicio-pais/**
+
+#-> microservicio-distrito
+zuul.routes.distrito.service-id = microservicio-distrito
+zuul.routes.distrito.path = /api/microservicio-distrito/**
+
+#-> microservicio-empresa
+zuul.routes.empresa.service-id = microservicio-empresa
+zuul.routes.empresa.path = /api/microservicio-empresa/**
