--- a/operativo/src/main/resources/application.properties
+++ b/operativo/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name = microservicio-operativo
-#server.port = ${PORT:0}
-server.port = 50
+server.port = ${PORT:0}
 
-#» Registro eureka-server
-eureka.client.service-url.defaultZone = http://localhost:8761/eureka
+#» Register instance into eureka-server
 eureka.instance.instance-id = ${spring.application.name}
