--- a/pais/src/main/resources/application.properties
+++ b/pais/src/main/resources/application.properties
@@ -1,10 +1,5 @@
 spring.application.name = microservicio-pais
 server.port = ${PORT:0}
 
-#Registrar en config-server
-spring.cloud.config.uri = http://localhost:8888
-
-
-#Registrar en eureka-server
+#» To create instance into eureka-server
 eureka.instance.instance-id = ${spring.application.name}
-eureka.client.service-url.defaultZone = http://localhost:8761/eureka
